# electron3

./: .gitignore  Dockerfile  Dockerfile.build  README.md  docker-compose.yml  index.html  main.js  package-lock.json  package.json  preload.js  render.js
webautomate_ai/: .gitignore  README.md  agent.py  build.py  pyproject.toml
webautomate_ai/modules/: controller_setup.py  prompt_interpreter.py  runner.py
webautomate_ai/utils/: custom_actions.py  env.py
